# gu-provider-ui-linux

./: .gitignore  Dockerfile  README.md  meson.build
.github/actions/build-vala-action/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: blank.yml
data/: gu-provider-ui-linux.desktop  resources.xml  window.glade
debian/: README.Debian  changelog  control  rules
src/: gu-provider-indicator.vala  gu-provider-ui-linux.desktop  gu-provider-ui-linux.vala  meson.build
